add slider popular book and head slider

--- a/slider-demo.html
+++ b/slider-demo.html
@@ -4,44 +4,182 @@
     <meta charset="utf-8">
     <title>Слайдер на CSS</title>
     <link rel="stylesheet" type="text/css" href="css/slider-demo.css">
+    <link rel="stylesheet" href="css/style.css">
 
 
 </head>
 <body>
-<div class="all">
-    <input checked type="radio" name="respond" id="desktop">
-    <article id="slider">
-        <input checked type="radio" name="slider" id="switch1">
-        <input type="radio" name="slider" id="switch2">
-        <input type="radio" name="slider" id="switch3">
-        <input type="radio" name="slider" id="switch4">
-        <input type="radio" name="slider" id="switch5">
-        <div id="slides">
-            <div id="overflow">
-                <div class="image">
-                    <article><img src="1.jpg"></article>
-                    <article><img src="2.jpg"></article>
-                    <article><img src="3.jpg"></article>
-                    <article><img src="4.jpg"></article>
-                    <article><img src="5.jpg"></article>
+    <div class="slider-header-book">
+        <input checked type="radio" name="respond" id="desktop">
+        <label for="desktop"></label>
+        <article id="slider">
+            <input checked type="radio" name="slider" id="switch1">
+            <input type="radio" name="slider" id="switch2">
+            <input type="radio" name="slider" id="switch3">
+            <input type="radio" name="slider" id="switch4">
+            <input type="radio" name="slider" id="switch5">
+            <div id="slides">
+                <div id="overflow">
+                    <div class="image">
+                        <article>
+                            <div class="bookslide container">
+                                <div class="bookschoice">
+                                    <div class="img_slider">
+                                        <div class="category_slider">
+                                            <p>Fantasy</p>
+                                        </div>
+                                        <img src="img/cover.png" alt="bookharry" width="412" height="595">
+                                    </div>
+                                    <div class="img_book">
+                                        <img src="img/hogwarts1.png" alt="hogwards" width="417" height="735">
+                                    </div>
+                                    <div class="clearfix"></div>
+                                </div>
+
+                                <div class="booktext">
+                                    <p><span class="font_slider_grey">Harry Potter And  <br>
+                                        The Sorcerer's Stone</span></p>
+                                    <p><span class="font_slider_orange">By Joan Rowling </span> <span class="font_slider_vote">5 <img
+                                            src="img/star.png" width="18" height="17" alt="star"></span></p>
+                                    <span class="font_slider_comment"> Vestibulum rutrum quam vitae fringilla tincidunt.
+                                            Suspendisse nec tortor urna.
+                                            Ut laoreet sodales nisi, quis iaculis nulla iaculis vitae.</span>
+                                    <div><span class="font_yrsa">$100</span></div>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+
+                        </article>
+                        <article>
+                            <div class="bookslide container">
+                                <div class="bookschoice">
+                                    <div class="img_slider">
+                                        <div class="category_slider">
+                                            <p>Fantasy</p>
+                                        </div>
+                                        <img src="img/cover.png" alt="bookharry" width="412" height="595">
+                                    </div>
+                                    <div class="img_book">
+                                        <img src="img/hogwarts1.png" alt="hogwards" width="417" height="735">
+                                    </div>
+                                    <div class="clearfix"></div>
+                                </div>
+
+                                <div class="booktext">
+                                    <p><span class="font_slider_grey">Harry Potter And  <br>
+                                        The Sorcerer's Stone</span></p>
+                                    <p><span class="font_slider_orange">By Joan Rowling </span> <span class="font_slider_vote">5 <img
+                                            src="img/star.png" width="18" height="17" alt="star"></span></p>
+                                    <span class="font_slider_comment"> Vestibulum rutrum quam vitae fringilla tincidunt.
+                                            Suspendisse nec tortor urna.
+                                            Ut laoreet sodales nisi, quis iaculis nulla iaculis vitae.</span>
+                                    <div><span class="font_yrsa">$100</span></div>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+                        </article>
+                        <article>
+                            <div class="bookslide container">
+                                <div class="bookschoice">
+                                    <div class="img_slider">
+                                        <div class="category_slider">
+                                            <p>Fantasy</p>
+                                        </div>
+                                        <img src="img/cover.png" alt="bookharry" width="412" height="595">
+                                    </div>
+                                    <div class="img_book">
+                                        <img src="img/hogwarts1.png" alt="hogwards" width="417" height="735">
+                                    </div>
+                                    <div class="clearfix"></div>
+                                </div>
+
+                                <div class="booktext">
+                                    <p><span class="font_slider_grey">Harry Potter And  <br>
+                                        The Sorcerer's Stone</span></p>
+                                    <p><span class="font_slider_orange">By Joan Rowling </span> <span class="font_slider_vote">5 <img
+                                            src="img/star.png" width="18" height="17" alt="star"></span></p>
+                                    <span class="font_slider_comment"> Vestibulum rutrum quam vitae fringilla tincidunt.
+                                            Suspendisse nec tortor urna.
+                                            Ut laoreet sodales nisi, quis iaculis nulla iaculis vitae.</span>
+                                    <div><span class="font_yrsa">$100</span></div>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+                        </article>
+                        <article>
+                            <div class="bookslide container">
+                                <div class="bookschoice">
+                                    <div class="img_slider">
+                                        <div class="category_slider">
+                                            <p>Fantasy</p>
+                                        </div>
+                                        <img src="img/cover.png" alt="bookharry" width="412" height="595">
+                                    </div>
+                                    <div class="img_book">
+                                        <img src="img/hogwarts1.png" alt="hogwards" width="417" height="735">
+                                    </div>
+                                    <div class="clearfix"></div>
+                                </div>
+
+                                <div class="booktext">
+                                    <p><span class="font_slider_grey">Harry Potter And  <br>
+                                        The Sorcerer's Stone</span></p>
+                                    <p><span class="font_slider_orange">By Joan Rowling </span> <span class="font_slider_vote">5 <img
+                                            src="img/star.png" width="18" height="17" alt="star"></span></p>
+                                    <span class="font_slider_comment"> Vestibulum rutrum quam vitae fringilla tincidunt.
+                                            Suspendisse nec tortor urna.
+                                            Ut laoreet sodales nisi, quis iaculis nulla iaculis vitae.</span>
+                                    <div><span class="font_yrsa">$100</span></div>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+                        </article>
+                        <article>
+                            <div class="bookslide container">
+                                <div class="bookschoice">
+                                    <div class="img_slider">
+                                        <div class="category_slider">
+                                            <p>Fantasy</p>
+                                        </div>
+                                        <img src="img/cover.png" alt="bookharry" width="412" height="595">
+                                    </div>
+                                    <div class="img_book">
+                                        <img src="img/hogwarts1.png" alt="hogwards" width="417" height="735">
+                                    </div>
+                                    <div class="clearfix"></div>
+                                </div>
+
+                                <div class="booktext">
+                                    <p><span class="font_slider_grey">Harry Potter And  <br>
+                                        The Sorcerer's Stone</span></p>
+                                    <p><span class="font_slider_orange">By Joan Rowling </span> <span class="font_slider_vote">5 <img
+                                            src="img/star.png" width="18" height="17" alt="star"></span></p>
+                                    <span class="font_slider_comment"> Vestibulum rutrum quam vitae fringilla tincidunt.
+                                            Suspendisse nec tortor urna.
+                                            Ut laoreet sodales nisi, quis iaculis nulla iaculis vitae.</span>
+                                    <div><span class="font_yrsa">$100</span></div>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+                        </article>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div id="controls">
-            <label for="switch1"></label>
-            <label for="switch2"></label>
-            <label for="switch3"></label>
-            <label for="switch4"></label>
-            <label for="switch5"></label>
-        </div>
-        <div id="active">
-            <label for="switch1"></label>
-            <label for="switch2"></label>
-            <label for="switch3"></label>
-            <label for="switch4"></label>
-            <label for="switch5"></label>
-        </div>
-    </article>
-</div>
+            <div id="controls">
+                <label for="switch1"></label>
+                <label for="switch2"></label>
+                <label for="switch3"></label>
+                <label for="switch4"></label>
+                <label for="switch5"></label>
+            </div>
+            <div id="active">
+                <label for="switch1"></label>
+                <label for="switch2"></label>
+                <label for="switch3"></label>
+                <label for="switch4"></label>
+                <label for="switch5"></label>
+            </div>
+        </article>
+    </div>
 </body>
 </html>
