--- a/slider.html
+++ b/slider.html
@@ -7,6 +7,7 @@
     <title>slider</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/slider-forbook.css">
 </head>
 <body>
 <div id="slider-wrap-popularseries">
