--- a/index.html
+++ b/index.html
@@ -911,9 +911,8 @@
         </div>
     </div> <!-- end container -->
 
-    <div class="wrap-footer">
-        <div class="container">
-            <nav class="menu_futer">
+        <div class="wrap-footer">
+            <nav class="menu_futer container">
                 <ul>
                     <li><a href="#">sitemap</a></li>
                     <li><a href="#">help</a></li>
@@ -923,7 +922,7 @@
                 </ul>
             </nav>
             <div class="clearfix"></div>
-            <div class="footer_content container">
+            <div class="footer_content container ">
                 <div class="footer_section_about">
                     <div class="section_about_header">
                         <h2>About</h2>
@@ -931,45 +930,43 @@
                             Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta.
                             Nam condimentum vitae ligula vel ornare. Phasellus at semper turpis.</p>
                     </div>
-                    <div class="footer_section_inner_box">
-                        <div class="footer_section_box">
-                            <div class="section_box">
-                                <h3><a href="#">Ade books</a></h3>
-                                <p>Rare Books & Textbooks</p>
-                            </div>
-                            <div class="section_box">
-                                <h3><a href="#">DpReview</a></h3>
-                                <p>Digital Photography</p>
-                            </div>
-                            <div class="section_box">
-                                <h3><a href="#">Audible</a></h3>
-                                <p>Download Audio Books</p>
-                            </div>
-                        </div>
-                        <div class="footer_section_box">
-                            <div class="section_box">
-                                <h3><a href="#">Junglee</a></h3>
-                                <p>Shop Online in India</p>
-                            </div>
-                            <div class="section_box">
-                                <h3><a href="#">Look</a></h3>
-                                <p>Kids' Clothing & Shoes</p>
-                            </div>
-                            <div class="section_box">
-                                <h3><a href="#">MYHABIT</a></h3>
-                                <p>Private Fashion Designer Sales</p>
-                            </div>
-                        </div>
+                    <div class="footer_section_active">
+                        <h2>Stay in touch</h2>
+                        <form action="" name="subscribe-form" class="subscribe-form">
+                            <input type="email" id="fname" name="fname" placeholder="Your E-mail">
+                            <button class="subscribe-button" type="submit">Subscribe</button>
+                        </form>
                     </div>
                 </div> <!-- footer_section_about -->
-                <div class="footer_section_active">
-                    <h2>Stay in touch</h2>
-                    <form action="" class="subscribe_form">
-                        <input type="email" id="fname" name="fname" placeholder="Your E-mail">
-                        <button class="subscribe_button" type="submit">Subscribe</button>
-                        <!--<img src="img/icons_svg/mail.svg" alt="mail"> -->
-                    </form>
 
+                <div class="footer_section_about">
+                    <div class="footer_section_box">
+                        <div class="section_box">
+                            <h3><a href="#">Ade books</a></h3>
+                            <p>Rare Books & Textbooks</p>
+                        </div>
+                        <div class="section_box">
+                            <h3><a href="#">DpReview</a></h3>
+                            <p>Digital Photography</p>
+                        </div>
+                        <div class="section_box">
+                            <h3><a href="#">Audible</a></h3>
+                            <p>Download Audio Books</p>
+                        </div>
+                        <div class="section_box">
+                            <h3><a href="#">Junglee</a></h3>
+                            <p>Shop Online in India</p>
+                        </div>
+                        <div class="section_box">
+                            <h3><a href="#">Look</a></h3>
+                            <p>Kids' Clothing & Shoes</p>
+                        </div>
+                        <div class="section_box">
+                            <h3><a href="#">MYHABIT</a></h3>
+                            <p>Private Fashion Designer
+                                Sales</p>
+                        </div>
+                    </div>
                     <div class="footer_social">
                         <h2>Follow us</h2>
                         <div class="social_icon">
@@ -981,14 +978,92 @@
                             </ul>
                         </div>
                     </div>
+                </div> <!-- footer_section_about -->
+
+                <div class="footer_info">
+                    <p>&#169; 2016 Bookworm. All rights reserved</p>
                 </div>
-                <div class="clearfix"></div>
-            </div>
-            <div class="footer_info">
-                <p>&#169; 2016 Bookworm. All rights reserved</p>
-            </div>
-        </div>
-    </div>
+            </div> <!-- end footer_content container-->
+        </div> <!-- wrap-footer -->
+
+    <!--<div class="wrap-footer">-->
+        <!--<div class="container">-->
+            <!--<nav class="menu_futer">-->
+                <!--<ul>-->
+                    <!--<li><a href="#">sitemap</a></li>-->
+                    <!--<li><a href="#">help</a></li>-->
+                    <!--<li><a href="#">delivery</a></li>-->
+                    <!--<li><a href="#">privacy policy</a></li>-->
+                    <!--<li><a href="#">accessibilliti</a></li>-->
+                <!--</ul>-->
+            <!--</nav>-->
+            <!--<div class="clearfix"></div>-->
+            <!--<div class="footer_content container">-->
+                <!--<div class="footer_section_about">-->
+                    <!--<div class="section_about_header">-->
+                        <!--<h2>About</h2>-->
+                        <!--<p>Cras quis nulla commodo, aliquam lectus sed, blandit augue.-->
+                            <!--Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta.-->
+                            <!--Nam condimentum vitae ligula vel ornare. Phasellus at semper turpis.</p>-->
+                    <!--</div>-->
+                    <!--<div class="footer_section_inner_box">-->
+                        <!--<div class="footer_section_box">-->
+                            <!--<div class="section_box">-->
+                                <!--<h3><a href="#">Ade books</a></h3>-->
+                                <!--<p>Rare Books & Textbooks</p>-->
+                            <!--</div>-->
+                            <!--<div class="section_box">-->
+                                <!--<h3><a href="#">DpReview</a></h3>-->
+                                <!--<p>Digital Photography</p>-->
+                            <!--</div>-->
+                            <!--<div class="section_box">-->
+                                <!--<h3><a href="#">Audible</a></h3>-->
+                                <!--<p>Download Audio Books</p>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="footer_section_box">-->
+                            <!--<div class="section_box">-->
+                                <!--<h3><a href="#">Junglee</a></h3>-->
+                                <!--<p>Shop Online in India</p>-->
+                            <!--</div>-->
+                            <!--<div class="section_box">-->
+                                <!--<h3><a href="#">Look</a></h3>-->
+                                <!--<p>Kids' Clothing & Shoes</p>-->
+                            <!--</div>-->
+                            <!--<div class="section_box">-->
+                                <!--<h3><a href="#">MYHABIT</a></h3>-->
+                                <!--<p>Private Fashion Designer Sales</p>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div> &lt;!&ndash; footer_section_about &ndash;&gt;-->
+                <!--<div class="footer_section_active">-->
+                    <!--<h2>Stay in touch</h2>-->
+                    <!--<form action="" class="subscribe_form">-->
+                        <!--<input type="email" id="fname" name="fname" placeholder="Your E-mail">-->
+                        <!--<button class="subscribe_button" type="submit">Subscribe</button>-->
+                        <!--&lt;!&ndash;<img src="img/icons_svg/mail.svg" alt="mail"> &ndash;&gt;-->
+                    <!--</form>-->
+
+                    <!--<div class="footer_social">-->
+                        <!--<h2>Follow us</h2>-->
+                        <!--<div class="social_icon">-->
+                            <!--<ul class="menu_social">-->
+                                <!--<li><a href="#"><img src="img/icons_svg/facebook.svg" alt="facebook"></a></li>-->
+                                <!--<li><a href="#"><img src="img/icons_svg/twitter.svg" alt="twitter"></a></li>-->
+                                <!--<li><a href="#"><img src="img/icons_svg/pinterest.svg" alt="pinterest"></a></li>-->
+                                <!--<li><a href="#"><img src="img/icons_svg/instagram.svg" alt="instagram"></a></li>-->
+                            <!--</ul>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="clearfix"></div>-->
+            <!--</div>-->
+            <!--<div class="footer_info">-->
+                <!--<p>&#169; 2016 Bookworm. All rights reserved</p>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
 
     <div class="container">
         <div id="wrap-login">
