removed unnecessary files

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <!--</div>-->
     <!-- end header -->
     <!-- slider-head-book -->
-    <div class="slider-header-book">
+    <div class="slider-header-book container">
         <input checked type="radio" name="respond" id="desktop">
         <label for="desktop"></label>
         <article id="slider">
@@ -229,7 +229,7 @@
                 <label for="switch4"></label>
                 <label for="switch5"></label>
             </div>
-            <div id="active-slider-head-book">
+            <div id="active">
                 <label for="switch1"></label>
                 <label for="switch2"></label>
                 <label for="switch3"></label>
@@ -237,7 +237,6 @@
                 <label for="switch5"></label>
             </div>
         </article>
-        <div class="clearfix"></div>
     </div>
 
 
