--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Bookworm</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/slider-forbook.css">
+    <!--<link rel="stylesheet" href="css/slider-forbook.css">-->
 </head>
 <body>
     <header class="wrap">
@@ -37,36 +37,7 @@
             <div class="clearfix"></div>
         </nav>
     </header>
-
-        <!--<div class="bookslide container">-->
-            <!--<div class="bookschoice">-->
-                <!--<div class="img_slider">-->
-                    <!--<div class="category_slider">-->
-                        <!--<p>Fantasy</p>-->
-                    <!--</div>-->
-                    <!--<img src="img/cover.png" alt="bookharry" width="412" height="595">-->
-                <!--</div>-->
-                <!--<div class="img_book">-->
-                    <!--<img src="img/hogwarts1.png" alt="hogwards" width="417" height="735">-->
-                <!--</div>-->
-                <!--<div class="clearfix"></div>-->
-            <!--</div>-->
-
-            <!--<div class="booktext">-->
-                <!--<p><span class="font_slider_grey">Harry Potter And  <br>-->
-                                    <!--The Sorcerer's Stone</span></p>-->
-                <!--<p><span class="font_slider_orange">By Joan Rowling </span> <span class="font_slider_vote">5 <img-->
-                        <!--src="img/star.png" width="18" height="17" alt="star"></span></p>-->
-                <!--<span class="font_slider_comment"> Vestibulum rutrum quam vitae fringilla tincidunt.-->
-                                        <!--Suspendisse nec tortor urna.-->
-                                        <!--Ut laoreet sodales nisi, quis iaculis nulla iaculis vitae.</span>-->
-                <!--<div><span class="font_yrsa">$100</span></div>-->
-            <!--</div>-->
-            <!--<div class="clearfix"></div>-->
-        <!--</div>-->
-    <!-- end header -->
-    <!-- slider-head-book -->
-    <div class="slider-header-book container">
+    <section class="slider-header-book container">
         <input checked type="radio" name="respond" id="desktop">
         <label for="desktop"></label>
         <article id="slider">
@@ -237,36 +208,33 @@
                 <label for="switch5"></label>
             </div>
         </article>
-    </div>
+    </section>
 
-
-    <div class="container">
-        <div class="presentation_books">
-            <div class="presentation_book">
-                <div class="presentation_text">
-                    <h2> The Da Vinci Code </h2>
-                    <span class="fontcaption_orange">Dan Brown</span>
-                    <span class="font_vote"> 5 <img src="img/star.png" width="18" height="17" alt="star"> </span>
-                </div>
-                <div class="presentation_book_img">
-                    <img src="img/bitmap.png" alt="Bitmap" width="180">
-                </div>
-
-                <div class="clearfix"></div>
+    <section class="presentation_books container">
+        <div class="presentation_book">
+            <div class="presentation_text">
+                <h2> The Da Vinci Code </h2>
+                <span class="fontcaption_orange">Dan Brown</span>
+                <span class="font_vote"> 5 <img src="img/star.png" width="18" height="17" alt="star"> </span>
             </div>
-            <div class="presentation_book">
-                <div class="presentation_text">
-                    <h2>A major update in the Detective section </h2>
-                </div>
-                <div class="presentation_book_img">
-                    <img src="img/images.png" alt="Images" width="180">
-                </div>
-                <div class="clearfix"></div>
+            <div class="presentation_book_img">
+                <img src="img/bitmap.png" alt="Bitmap" width="180">
             </div>
             <div class="clearfix"></div>
         </div>
-    </div>
-    <div class="container shopfront">
+        <div class="presentation_book">
+            <div class="presentation_text">
+                <h2>A major update in the Detective section </h2>
+            </div>
+            <div class="presentation_book_img">
+                <img src="img/images.png" alt="Images" width="180">
+            </div>
+            <div class="clearfix"></div>
+        </div>
+        <div class="clearfix"></div>
+    </section>
+
+    <section class="container shopfront">
         <h1>Shopfront</h1>
         <nav class="shopfrontmenu">
             <div class="shopfrontmenuleft">
@@ -286,10 +254,9 @@
             </div>
             <div class="clearfix"></div>
         </nav>
+    </section>
 
-    </div>
-
-    <div class="container">
+    <section class="container">
         <div class="books">
             <div class="book-item">
                 <a href="#"><img class="book-img" src="img/books/book1.png" alt="Cover he Opaque Region" width="146"
@@ -401,8 +368,9 @@
         <div class="container_button">
             <a href="#" class="btn">All books</a>
         </div>
-    </div> <!-- emd container -->
-    <div class="container">
+    </section> <!-- emd container -->
+
+    <section class="container">
         <div class="popwrites">
             <h1 class="popwrites_header">Popular writers</h1>
             <nav class="menupopular">
@@ -460,9 +428,9 @@
                 <div class="clearfix"></div>
             </div> <!-- end literature_write -->
         </div>
-    </div>
+    </section>
 
-    <div class="container">
+    <section class="container">
         <div class="literature_books">
             <h1>Literature news</h1>
         </div>
@@ -509,9 +477,9 @@
         <div class="container_button">
             <a href="#" class="btn">All news</a>
         </div>
-    </div> <!-- end container -->
+    </section> <!-- end container -->
 
-    <div class="container_wrap">
+    <section class="container_wrap">
         <div class="slider_block">
             <div class="slide_block1">
                 <img src="img/man.png" alt="man with dog" width="866" height="632">
@@ -528,9 +496,9 @@
             </div>
             <div class="clearfix"></div>
         </div>
-    </div> <!-- end container -->
+    </section> <!-- end container -->
 
-    <div class="container background_books">
+    <section class="container background_books">
         <div class="discount">
             <div class="about_discounts">
                 <h1> Discount for novel</h1>
@@ -554,9 +522,9 @@
                 <a href="#" class="btn">All books</a>
             </div>
         </div>
-    </div> <!-- end container -->
+    </section> <!-- end container -->
 
-    <div class="container">
+    <section class="container">
         <div class="slider-popular-book">
             <input checked type="radio" name="respond" id="desktop-popular-book">
             <label for="desktop-popular-book"></label>
@@ -828,61 +796,9 @@
                 </div>
             </article>
         </div>
-        <!--<div class="popular_series"><h1>Popular series</h1></div>-->
-        <!--<div class="book_series">-->
-            <!--<div class="popular_book">-->
-                <!--<div class="popular_book_img">-->
-                    <!--<img class="cover1" src="img/popularseries/brown-book-cover.png" alt="brown-book-cover" width="119"-->
-                         <!--height="185">-->
-                    <!--<img class="cover2" src="img/popularseries/angel-and-demon.png" alt="angel-and-demon" width="132"-->
-                         <!--height="205">-->
-                    <!--<img class="cover3" src="img/popularseries/da_vinci.png" alt="da_vinci" width="145" height="225">-->
-                <!--</div>-->
-                <!--<div class="popular-book-text">-->
-                    <!--<p><span class="book_series_fonts">Intellectual bestseller</span></p>-->
-                    <!--<p><span class="font_slider_sum">20</span> <img src="img/icons_svg/icon_book.png" width="15" height="17"-->
-                                                                    <!--alt="icon_book"></p>-->
-                <!--</div>-->
-            <!--</div>-->
+    </section>
 
-            <!--<div class="popular_book">-->
-                <!--<img class="cover1" src="img/popularseries/the-old-man.png" alt="the-old-man" width="119" height="185">-->
-                <!--<img class="cover2" src="img/popularseries/adams.png" alt="adams" width="132" height="205">-->
-                <!--<img class="cover3" src="img/popularseries/guintar-method.png" alt="guintar-method" width="146"-->
-                     <!--height="227">-->
-
-                <!--<div class="popular-book-text">-->
-                    <!--<p><span class="book_series_fonts">Hobbies</span></p>-->
-                    <!--<p><span class="font_slider_sum">85</span>-->
-                        <!--<img src="img/icons_svg/icon_book.png" width="15" height="17" alt="icon_book"></p>-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div class="popular_book">-->
-                <!--<img class="cover1" src="img/popularseries/childrens-book-cover1.png" alt="childrens-book-cover1"-->
-                     <!--width="119" height="185">-->
-                <!--<img class="cover2" src="img/popularseries/hi-kids.png" alt="hi-kids" width="132" height="205">-->
-                <!--<img class="cover3" src="img/popularseries/childrens-book-cover2.png" alt="childrens-book-cover2"-->
-                     <!--width="146" height="227">-->
-                <!--<div class="popular-book-text">-->
-                    <!--<p><span class="book_series_fonts">Childrens literature</span></p>-->
-                    <!--<p><span class="font_slider_sum">54</span> <img src="img/icons_svg/icon_book.png" width="15" height="17"-->
-                                                                    <!--alt="icon_book"></p>-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div class="popular_book">-->
-                <!--<img class="cover1" src="img/popularseries/birds-cover.png" alt="birds-cover" width="119" height="185">-->
-                <!--<img class="cover2" src="img/popularseries/explore.png" alt="explore" width="132" height="205">-->
-                <!--<img class="cover3" src="img/popularseries/birds.png" alt="birds" width="146" height="227">-->
-                <!--<div class="popular-book-text">-->
-                    <!--<p><span class="book_series_fonts">National geographic</span></p>-->
-                    <!--<p><span class="font_slider_sum">21</span> <img src="img/icons_svg/icon_book.png" width="15" height="17"-->
-                                                                    <!--alt="icon_book"></p>-->
-                <!--</div>-->
-            <!--</div>-->
-
-        <!--</div>-->
-    <!--</div>-->
-    <div class="container">
+    <section class="container">
         <div class="publishers">
             <div class="description">
                 <h1>Publishers</h1>
@@ -908,9 +824,9 @@
             </div>
             <div class="clearfix"></div>
         </div>
-    </div> <!-- end container -->
+    </section> <!-- end container -->
 
-        <div class="wrap-footer">
+    <section class="wrap-footer">
             <nav class="menu_futer container">
                 <ul>
                     <li><a href="#">sitemap</a></li>
@@ -983,88 +899,9 @@
                     <p>&#169; 2016 Bookworm. All rights reserved</p>
                 </div>
             </div> <!-- end footer_content container-->
-        </div> <!-- wrap-footer -->
+        </section> <!-- wrap-footer -->
 
-    <!--<div class="wrap-footer">-->
-        <!--<div class="container">-->
-            <!--<nav class="menu_futer">-->
-                <!--<ul>-->
-                    <!--<li><a href="#">sitemap</a></li>-->
-                    <!--<li><a href="#">help</a></li>-->
-                    <!--<li><a href="#">delivery</a></li>-->
-                    <!--<li><a href="#">privacy policy</a></li>-->
-                    <!--<li><a href="#">accessibilliti</a></li>-->
-                <!--</ul>-->
-            <!--</nav>-->
-            <!--<div class="clearfix"></div>-->
-            <!--<div class="footer_content container">-->
-                <!--<div class="footer_section_about">-->
-                    <!--<div class="section_about_header">-->
-                        <!--<h2>About</h2>-->
-                        <!--<p>Cras quis nulla commodo, aliquam lectus sed, blandit augue.-->
-                            <!--Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta.-->
-                            <!--Nam condimentum vitae ligula vel ornare. Phasellus at semper turpis.</p>-->
-                    <!--</div>-->
-                    <!--<div class="footer_section_inner_box">-->
-                        <!--<div class="footer_section_box">-->
-                            <!--<div class="section_box">-->
-                                <!--<h3><a href="#">Ade books</a></h3>-->
-                                <!--<p>Rare Books & Textbooks</p>-->
-                            <!--</div>-->
-                            <!--<div class="section_box">-->
-                                <!--<h3><a href="#">DpReview</a></h3>-->
-                                <!--<p>Digital Photography</p>-->
-                            <!--</div>-->
-                            <!--<div class="section_box">-->
-                                <!--<h3><a href="#">Audible</a></h3>-->
-                                <!--<p>Download Audio Books</p>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                        <!--<div class="footer_section_box">-->
-                            <!--<div class="section_box">-->
-                                <!--<h3><a href="#">Junglee</a></h3>-->
-                                <!--<p>Shop Online in India</p>-->
-                            <!--</div>-->
-                            <!--<div class="section_box">-->
-                                <!--<h3><a href="#">Look</a></h3>-->
-                                <!--<p>Kids' Clothing & Shoes</p>-->
-                            <!--</div>-->
-                            <!--<div class="section_box">-->
-                                <!--<h3><a href="#">MYHABIT</a></h3>-->
-                                <!--<p>Private Fashion Designer Sales</p>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div> &lt;!&ndash; footer_section_about &ndash;&gt;-->
-                <!--<div class="footer_section_active">-->
-                    <!--<h2>Stay in touch</h2>-->
-                    <!--<form action="" class="subscribe_form">-->
-                        <!--<input type="email" id="fname" name="fname" placeholder="Your E-mail">-->
-                        <!--<button class="subscribe_button" type="submit">Subscribe</button>-->
-                        <!--&lt;!&ndash;<img src="img/icons_svg/mail.svg" alt="mail"> &ndash;&gt;-->
-                    <!--</form>-->
-
-                    <!--<div class="footer_social">-->
-                        <!--<h2>Follow us</h2>-->
-                        <!--<div class="social_icon">-->
-                            <!--<ul class="menu_social">-->
-                                <!--<li><a href="#"><img src="img/icons_svg/facebook.svg" alt="facebook"></a></li>-->
-                                <!--<li><a href="#"><img src="img/icons_svg/twitter.svg" alt="twitter"></a></li>-->
-                                <!--<li><a href="#"><img src="img/icons_svg/pinterest.svg" alt="pinterest"></a></li>-->
-                                <!--<li><a href="#"><img src="img/icons_svg/instagram.svg" alt="instagram"></a></li>-->
-                            <!--</ul>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="clearfix"></div>-->
-            <!--</div>-->
-            <!--<div class="footer_info">-->
-                <!--<p>&#169; 2016 Bookworm. All rights reserved</p>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-
-    <div class="container">
+    <section class="container">
         <div id="wrap-login">
             <div class="inner-wrap-login">
             <div class="transp-back-wrap-login"></div>
@@ -1105,7 +942,7 @@
             </form>
             </div>
         </div>
-    </div>
+    </section>
 
 </body>
 </html>
