--- a/article.html
+++ b/article.html
@@ -117,8 +117,8 @@
                     </li>
                 </ol>
             </div>
-            <figure><img src="img/street.png" alt="street">
-                <figcaption>Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed sapien metus,
+            <figure><img src="img/street.png" width="749" height="422" alt="street">
+                <figcaption class="article-figcaption">Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed sapien metus,
                     scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque.
                 </figcaption>
             </figure>
@@ -129,18 +129,27 @@
                 outside as this chic bookstore is on the inside, with paperback birds and mobiles hanging from
                 the ceiling and two floors of glossy covers to keep you shopping for hours.</p>
 
-            <p class="align-left" style="background-color: blue;">
-                <h5>Read the original story: Most Incredible Bookstores</h5>
-                <small>Bookstore Day-worthy recommendations wouldn't be complete without a store from the city where this holiday originated —
-                    San Francisco. As San Fran bookstores go, City Lights (a Bay Area institution since 1953) is a can't-miss for its timeless
-                </small>
-            </p>
-            <p><a href="#">Cras quis nulla commodo</a>aliquam lectus sed, blandit augue. Cras
-                    ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta. Nam condimentum vitae ligula vel ornare. Phasellus at semper turpis. Nunc eu tellus tortor. Etiam at condimentum nisl, vitae sagittis orci. Donec id
-                    dignissim nunc. Donec elit ante, eleifend a dolor et, venenatis facilisis dolor.
-                    <strong>What better way to celebrate Shakespeare 400 years after his death than at a bookstore in London after a show at the Globe? Better yet, Lutyens & Rubinstein is the closest you'll get to a real-life version of the Notting Hill book shop Hugh Grant's character owns in the 1999 rom-com.What better way to celebrate Shakespeare 400 years after his death than at a bookstore in London after a show at the Globe? Better yet, Lutyens & Rubinstein is the closest you'll get to a real-life version of the Notting Hill book shop Hugh Grant's character owns in the 1999 rom-com.
-            </p>
-            <hr>
+            <div class="inner-article-block">
+                <div class="article-block-left">
+                    <div class="inner-article-block-left">
+                        <h5>Read the original story: Most Incredible Bookstores</h5>
+                        <p>Bookstore Day-worthy recommendations wouldn't be complete without a store from the city where this holiday originated —
+                            San Francisco. As San Fran bookstores go, City Lights (a Bay Area institution since 1953) is a can't-miss for its timeless
+                        </p>
+                    </div>
+                </div>
+                <div class="article-block-right">
+                    <p><a href="#">Cras quis nulla commodo</a>,aliquam lectus sed, blandit augue. Cras
+                        ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta. Nam condimentum vitae ligula vel ornare. Phasellus at semper turpis. Nunc eu tellus tortor. Etiam at condimentum nisl, vitae sagittis orci. Donec id
+                        dignissim nunc. Donec elit ante, eleifend a dolor et, venenatis facilisis dolor. <strong>In feugiat orci odio, sed lacinia sem elementum quis. You can't just stick to the thrillers.</strong>
+                    </p>
+                    <p>What better way to celebrate Shakespeare 400 years after his death than at a bookstore in London after a show at the Globe? Better yet, Lutyens & Rubinstein is the closest you'll get to a real-life version of the Notting Hill book shop Hugh Grant's character owns in the 1999 rom-com.
+                    </p>
+                </div>
+
+            </div>
+            <div class="clearfix"></div>
+
         </div>
     <!--</div> &lt;!&ndash; end article-text &ndash;&gt;-->
             <section class="relation-post">
