article part float-left picture non procent

--- a/article.html
+++ b/article.html
@@ -130,27 +130,36 @@
                 the ceiling and two floors of glossy covers to keep you shopping for hours.</p>
 
             <div class="inner-article-block">
-                <div class="article-block-left">
+                <!--<div class="article-block-left">-->
                     <div class="inner-article-block-left">
                         <h5>Read the original story: Most Incredible Bookstores</h5>
                         <p>Bookstore Day-worthy recommendations wouldn't be complete without a store from the city where this holiday originated —
                             San Francisco. As San Fran bookstores go, City Lights (a Bay Area institution since 1953) is a can't-miss for its timeless
                         </p>
                     </div>
-                </div>
-                <div class="article-block-right">
-                    <p><a href="#">Cras quis nulla commodo</a>,aliquam lectus sed, blandit augue. Cras
-                        ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta. Nam condimentum vitae ligula vel ornare. Phasellus at semper turpis. Nunc eu tellus tortor. Etiam at condimentum nisl, vitae sagittis orci. Donec id
-                        dignissim nunc. Donec elit ante, eleifend a dolor et, venenatis facilisis dolor. <strong>In feugiat orci odio, sed lacinia sem elementum quis. You can't just stick to the thrillers.</strong>
-                    </p>
-                    <p>What better way to celebrate Shakespeare 400 years after his death than at a bookstore in London after a show at the Globe? Better yet, Lutyens & Rubinstein is the closest you'll get to a real-life version of the Notting Hill book shop Hugh Grant's character owns in the 1999 rom-com.
-                    </p>
-                </div>
+                <p><a href="#">Cras quis nulla commodo</a>,aliquam lectus sed, blandit augue. Cras
+                    ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta. Nam condimentum vitae ligula vel ornare. Phasellus at semper turpis. Nunc eu tellus tortor. Etiam at condimentum nisl, vitae sagittis orci. Donec id
+                    dignissim nunc. Donec elit ante, eleifend a dolor et, venenatis facilisis dolor. <strong>In feugiat orci odio, sed lacinia sem elementum quis. You can't just stick to the thrillers.</strong>
+                </p>
+                <p>What better way to celebrate Shakespeare 400 years after his death than at a bookstore in London after a show at the Globe? Better yet, Lutyens & Rubinstein is the closest you'll get to a real-life version of the Notting Hill book shop Hugh Grant's character owns in the 1999 rom-com.
+                </p>
 
             </div>
+                <!--<div class="article-block-right">-->
+                    <!--&lt;!&ndash;<p><a href="#">Cras quis nulla commodo</a>,aliquam lectus sed, blandit augue. Cras&ndash;&gt;-->
+                        <!--&lt;!&ndash;ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta. Nam condimentum vitae ligula vel ornare. Phasellus at semper turpis. Nunc eu tellus tortor. Etiam at condimentum nisl, vitae sagittis orci. Donec id&ndash;&gt;-->
+                        <!--&lt;!&ndash;dignissim nunc. Donec elit ante, eleifend a dolor et, venenatis facilisis dolor. <strong>In feugiat orci odio, sed lacinia sem elementum quis. You can't just stick to the thrillers.</strong>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</p>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<p>What better way to celebrate Shakespeare 400 years after his death than at a bookstore in London after a show at the Globe? Better yet, Lutyens & Rubinstein is the closest you'll get to a real-life version of the Notting Hill book shop Hugh Grant's character owns in the 1999 rom-com.&ndash;&gt;-->
+                    <!--&lt;!&ndash;</p>&ndash;&gt;-->
+                <!--</div>-->
+
+
+
+            <!--</div>-->
             <div class="clearfix"></div>
 
-        </div>
+        <!--</div>-->
     <!--</div> &lt;!&ndash; end article-text &ndash;&gt;-->
             <section class="relation-post">
                 <div class="related-item">
