--- a/article.html
+++ b/article.html
@@ -176,7 +176,7 @@
                         </a>
                         <p>
                             <span class="author">Lori Stevens</span>
-                            <span class="comment-date">15.10.16</span>
+                            <span class="date">15.10.16</span>
                         </p>
                     </div>
                 <div class="clearfix"></div>
@@ -198,18 +198,22 @@
                         <input id="article-form" type="submit" value="send">
                     </form>
                 </div>
+
                 <div class="post-users article-text">
                     <ul>
                         <li>
                             <article class="single-comment">
                                 <header>
-                                    <img src="img/Oval_avatar2.png" alt="Oval_avatar2">
-                                    <div class="comment-author">Tamila Drake</div>
-                                    <div class="comment-date">15.10.16</div>
-                                    <div class="actions">
-                                        <a href="">Reply</a>
-                                        <a href="">Links</a>
+                                    <img src="img/Oval_avatar2.png" alt="avatar">
+                                    <div class="comment-left">
+                                        <div class="comment-author">Tamila Drake</div>
+                                        <div class="comment-date">15.10.16</div>
                                     </div>
+                                    <div class="actions-right">
+                                        <a href="#"><img src="img/icons_svg/rectangle61.png" width="18" height="17" alt=""></a>
+                                        <a href="#"><img src="img/icons_svg/rectangle62.png" width="16" height="16" alt=""></a>
+                                    </div>
+                                    <div class="clearfix"></div>
                                 </header>
                                 <p class="comment-item-text">
                                     Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus. Nam tempus vel odio vitae aliquam.
@@ -217,33 +221,18 @@
                             </article>
                             <ul>
                                 <li>
-                                    <article class="single-comment">
+                                    <article class="answer-comment">
                                         <header>
-                                            <img src="img/Oval_avatar2.png" alt="Oval_avatar2">
-                                            <div class="comment-author">Tamila Drake</div>
-                                            <div class="comment-date">15.10.16</div>
-                                            <div class="actions">
-                                                <a href="">Reply</a>
-                                                <a href="">Links</a>
+                                            <img src="img/Oval_avatar2.png" alt="avatar">
+                                            <div class="comment-left">
+                                                <div class="comment-author">Tamila Drake</div>
+                                                <div class="comment-date">15.10.16</div>
                                             </div>
-                                        </header>
-                                        <p class="comment-item-text">
-                                            Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim,
-                                            pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.
-                                            Nam tempus vel odio vitae aliquam.
-                                        </p>
-                                    </article>
-                                </li>
-                                <li>
-                                    <article class="single-comment">
-                                        <header>
-                                            <img src="img/Oval_avatar2.png" alt="Oval_avatar2">
-                                            <div class="comment-author">Tamila Drake</div>
-                                            <div class="comment-date">15.10.16</div>
-                                            <div class="actions">
-                                                <a href="">Reply</a>
-                                                <a href="">Links</a>
+                                            <div class="actions-right">
+                                                <a href="#"><img src="img/icons_svg/rectangle61.png" width="18" height="17" alt=""></a>
+                                                <a href="#"><img src="img/icons_svg/rectangle62.png" width="16" height="16" alt=""></a>
                                             </div>
+                                            <div class="clearfix"></div>
                                         </header>
                                         <p class="comment-item-text">
                                             Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim,
@@ -255,6 +244,28 @@
                             </ul>
                         </li>
                     </ul>
+                    <ul>
+                        <li>
+                            <article class="single-comment">
+                                <header>
+                                    <img src="img/Oval_avatar2.png" alt="avatar">
+                                    <div class="comment-left">
+                                        <div class="comment-author">Tamila Drake</div>
+                                        <div class="comment-date">15.10.16</div>
+                                    </div>
+                                    <div class="actions-right">
+                                        <a href="#"><img src="img/icons_svg/rectangle61.png" width="18" height="17" alt=""></a>
+                                        <a href="#"><img src="img/icons_svg/rectangle62.png" width="16" height="16" alt=""></a>
+                                    </div>
+                                    <div class="clearfix"></div>
+                                </header>
+                                <p class="comment-item-text">
+                                    Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus. Nam tempus vel odio vitae aliquam.
+                                </p>
+                            </article>
+                        </li>
+                    </ul>
+
                     <a href="#"><b>Show more comments</b></a>
                 </div> <!-- post users -->
                 <!--<div class="clearfix"></div>-->
