responsive menu and article

--- a/article.html
+++ b/article.html
@@ -138,7 +138,7 @@
                 </ol>
             </div>
             <figure><img src="img/street.png" width="749" height="422" alt="street">
-                <figcaption class="article-figcaption">Donec facilisis tortor ut augue lacinia, at viverra est semper.
+                <figcaption class="article-figcaption-next">Donec facilisis tortor ut augue lacinia, at viverra est semper.
                     Sed sapien metus,
                     scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque.
                 </figcaption>
@@ -302,9 +302,84 @@
             </section>
 
     </article>
-    <div class="article-text">
+    <div class="article-text show-all">
         <a href="#" class="show-href">Show more comments</a>
     </div>
+
+    <section class="wrap-footer">
+        <nav class="menu_futer container">
+            <ul>
+                <li><a href="#">sitemap</a></li>
+                <li><a href="#">help</a></li>
+                <li><a href="#">delivery</a></li>
+                <li><a href="#">privacy policy</a></li>
+                <li><a href="#">accessibilliti</a></li>
+            </ul>
+        </nav>
+        <div class="clearfix"></div>
+        <div class="footer_content container ">
+            <div class="footer_section_about">
+                <div class="section_about_header">
+                    <h2>About</h2>
+                    <p>Cras quis nulla commodo, aliquam lectus sed, blandit augue.
+                        Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta.
+                        Nam condimentum vitae ligula vel ornare. Phasellus at semper turpis.</p>
+                </div>
+                <div class="footer_section_active">
+                    <h2>Stay in touch</h2>
+                    <form action="" name="subscribe-form" class="subscribe-form">
+                        <input type="email" id="fname" name="fname" placeholder="Your E-mail">
+                        <button class="subscribe-button" type="submit">Subscribe</button>
+                    </form>
+                </div>
+            </div> <!-- footer_section_about -->
+
+            <div class="footer_section_about">
+                <div class="footer_section_box">
+                    <div class="section_box">
+                        <h3><a href="#">Ade books</a></h3>
+                        <p>Rare Books & Textbooks</p>
+                    </div>
+                    <div class="section_box">
+                        <h3><a href="#">DpReview</a></h3>
+                        <p>Digital Photography</p>
+                    </div>
+                    <div class="section_box">
+                        <h3><a href="#">Audible</a></h3>
+                        <p>Download Audio Books</p>
+                    </div>
+                    <div class="section_box">
+                        <h3><a href="#">Junglee</a></h3>
+                        <p>Shop Online in India</p>
+                    </div>
+                    <div class="section_box">
+                        <h3><a href="#">Look</a></h3>
+                        <p>Kids' Clothing & Shoes</p>
+                    </div>
+                    <div class="section_box">
+                        <h3><a href="#">MYHABIT</a></h3>
+                        <p>Private Fashion Designer
+                            Sales</p>
+                    </div>
+                </div>
+                <div class="footer_social">
+                    <h2>Follow us</h2>
+                    <div class="social_icon">
+                        <ul class="menu_social">
+                            <li><a href="#"><img src="img/icons_svg/facebook.svg" alt="facebook"></a></li>
+                            <li><a href="#"><img src="img/icons_svg/twitter.svg" alt="twitter"></a></li>
+                            <li><a href="#"><img src="img/icons_svg/pinterest.svg" alt="pinterest"></a></li>
+                            <li><a href="#"><img src="img/icons_svg/instagram.svg" alt="instagram"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div> <!-- footer_section_about -->
+
+            <div class="footer_info">
+                <p>&#169; 2016 Bookworm. All rights reserved</p>
+            </div>
+        </div> <!-- end footer_content container-->
+    </section> <!-- wrap-footer -->
 
 
 </body>
