add respondive article

--- a/article.html
+++ b/article.html
@@ -303,7 +303,7 @@
 
     </article>
     <div class="article-text show-all">
-        <a href="#" class="show-href">Show more comments</a>
+        <a href="#" class="show-comments">Show more comments</a>
     </div>
 
     <section class="wrap-footer">
@@ -376,7 +376,8 @@
             </div> <!-- footer_section_about -->
 
             <div class="footer_info">
-                <p>&#169; 2016 Bookworm. All rights reserved</p>
+                <p class="footer-info-left" >&#169; 2016 Bookworm. All rights reserved</p>
+                <p class="footer-info-right"></p>
             </div>
         </div> <!-- end footer_content container-->
     </section> <!-- wrap-footer -->
