add respondive article

--- a/article.html
+++ b/article.html
@@ -275,12 +275,11 @@
                                 </li>
                             </ul>
                         </li>
-                    </ul>
-                    <ul>
+
                         <li>
-                            <article class="single-comment">
+                            <article class="single-comment-next">
                                 <header>
-                                    <img src="img/oval_avatar4.png" alt="avatar">
+                                    <img src="img/oval_avatar4.png" width="39" height="39" alt="avatar">
                                     <div class="comment-left">
                                         <div class="comment-author">Tamila Drake</div>
                                         <div class="comment-date">15.10.16</div>
