add respondive article

--- a/article.html
+++ b/article.html
@@ -193,8 +193,8 @@
                         suspended by SiriusXM after author Brad Thor makes controversial</p>
                     </a>
                     <p>
-                        <span class="author">Lori Stevens</span>
-                        <span class="date">15.10.16</span>
+                        <span class="author">Michelle Taylor</span>
+                        <span class="date">28.10.16</span>
                     </p>
                 </div>
                 <div class="related-item">
@@ -204,7 +204,7 @@
                         million in book</p>
                     </a>
                     <p>
-                        <span class="author">Lori Stevens</span>
+                        <span class="author">Nicholas Guerrero</span>
                         <span class="date">15.10.16</span>
                     </p>
                 </div>
