add respondive article

--- a/article.html
+++ b/article.html
@@ -253,6 +253,8 @@
                                 <li>
                                     <article class="answer-comment">
                                         <header>
+                                            <img class="img-arrow" src="img/icons_svg/rectangle63.png" height="4" width="6" alt="arrow">
+                                            <img class="img-line" src="img/icons_svg/shape24.png" height="13" width="13" alt="arrow">
                                             <img src="img/oval_avatar3.png" alt="avatar">
                                             <div class="comment-left">
                                                 <div class="comment-author">John Cash</div>
@@ -379,6 +381,49 @@
             </div>
         </div> <!-- end footer_content container-->
     </section> <!-- wrap-footer -->
+
+    <div class="container">
+        <div id="wrap-login">
+            <div class="inner-wrap-login">
+                <div class="transp-back-wrap-login"></div>
+                <a href="#"><img class="rectangle-arrow" src="img/rectangle9.png" alt="rectangle"></a>
+                <p>Login</p>
+                <form id="form-login" action="">
+                    <div class="inner-login-email">
+                        <input type="text" class="" placeholder="E-mail" name="login-email">
+                    </div>
+                    <div class="inner-login-password">
+                        <input type="text" placeholder="Password" name="login-password">
+                    </div>
+                    <div class="inner-login-form">
+                        <div class="inner-checkbox-remember">
+                            <input type="checkbox" class="checkbox-remember" id="remember" name="remember">
+                            <label for="remember">Remember me</label>
+                        </div>
+                        <div class="forgot-password">
+                            <a href="#">Forgot password</a>
+                        </div>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="sign-in">
+                        <input type="submit" value="Sign in">
+                    </div>
+                    <!-- <div class="create-account"> -->
+                    <a href="#" class="input-create">Create account<img src="img/rectangle55.png" width="17" height="13"
+                                                                        alt="arrow"></a>
+                    <!-- <div class="hr-form"></div> -->
+                    <div class="inner-login-social">
+                        <h3>Sign in with social:</h3>
+                        <div class="login-social">
+                            <a href="#"><img src="img/icons_svg/rectangle57.png" width="10" height="18" alt="facebook"></a>
+                            <a href="#"><img src="img/icons_svg/rectangle58.png" width="17" height="14" alt="pinterest"></a>
+                            <a href="#"><img src="img/icons_svg/Google.svg" alt="google"></a>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
 
 </body>
