--- a/cart2.html
+++ b/cart2.html
@@ -7,7 +7,7 @@
     <title>cart2</title>
     <link href="https://fonts.googleapis.com/css?family=Amiri|Lato:400,700|Ramaraja|Rozha+One|PT+Serif|Work+Sans|Yrsa" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css"><!-- fixme: Страница должна быть адаптивной  -->
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
         <nav class="menu container">
@@ -130,9 +130,8 @@
                 <div class="clearfix"></div>
         </div> <!-- end yourcart -->
 
-        <div class="wrap-footer">
-            <div class="container">
-            <nav class="menu_futer">
+        <section class="wrap-footer">
+            <nav class="menu_futer container">
                 <ul>
                     <li><a href="#">sitemap</a></li>
                     <li><a href="#">help</a></li>
@@ -142,7 +141,6 @@
                 </ul>
             </nav>
             <div class="clearfix"></div>
-            <hr>
             <div class="footer_content container ">
                 <div class="footer_section_about">
                     <div class="section_about_header">
@@ -151,44 +149,43 @@
                             Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta.
                             Nam condimentum vitae ligula vel ornare. Phasellus at semper turpis.</p>
                     </div>
-                    <div class="footer_section_inner_box">
-                        <div class="footer_section_box">
-                            <div class="section_box">
-                                <h3><a href="#">Ade books</a></h3>
-                                <p>Rare Books & Textbooks</p>
-                            </div>
-                            <div class="section_box">
-                                <h3><a href="#">DpReview</a></h3>
-                                <p>Digital Photography</p>
-                            </div>
-                            <div class="section_box">
-                                <h3><a href="#">Audible</a></h3>
-                                <p>Download Audio Books</p>
-                            </div>
-                        </div>
-                        <div class="footer_section_box">
-                            <div class="section_box">
-                                <h3><a href="#">Junglee</a></h3>
-                                <p>Shop Online in India</p>
-                            </div>
-                            <div class="section_box">
-                                <h3><a href="#">Look</a></h3>
-                                <p>Kids' Clothing & Shoes</p>
-                            </div>
-                            <div class="section_box">
-                                <h3><a href="#">MYHABIT</a></h3>
-                                <p>Private Fashion Designer
-                                    Sales</p>
-                            </div>
-                        </div>
+                    <div class="footer_section_active">
+                        <h2>Stay in touch</h2>
+                        <form action="" name="subscribe-form" class="subscribe-form">
+                            <input type="email" id="fname" name="fname" placeholder="Your E-mail">
+                            <button class="subscribe-button" type="submit">Subscribe</button>
+                        </form>
                     </div>
                 </div> <!-- footer_section_about -->
-                <div class="footer_section_active">
-                    <h2>Stay in touch</h2>
-                    <form action="" class="subscribe_form">
-                        <input type="email" id="fname" name="fname" placeholder="Your E-mail">
-                        <button class="subscribe_button" type="submit">Subscribe</button>
-                    </form>
+
+                <div class="footer_section_about">
+                    <div class="footer_section_box">
+                        <div class="section_box">
+                            <h3><a href="#">Ade books</a></h3>
+                            <p>Rare Books & Textbooks</p>
+                        </div>
+                        <div class="section_box">
+                            <h3><a href="#">DpReview</a></h3>
+                            <p>Digital Photography</p>
+                        </div>
+                        <div class="section_box">
+                            <h3><a href="#">Audible</a></h3>
+                            <p>Download Audio Books</p>
+                        </div>
+                        <div class="section_box">
+                            <h3><a href="#">Junglee</a></h3>
+                            <p>Shop Online in India</p>
+                        </div>
+                        <div class="section_box">
+                            <h3><a href="#">Look</a></h3>
+                            <p>Kids' Clothing & Shoes</p>
+                        </div>
+                        <div class="section_box">
+                            <h3><a href="#">MYHABIT</a></h3>
+                            <p>Private Fashion Designer
+                                Sales</p>
+                        </div>
+                    </div>
                     <div class="footer_social">
                         <h2>Follow us</h2>
                         <div class="social_icon">
@@ -200,15 +197,14 @@
                             </ul>
                         </div>
                     </div>
-                </div>
-                <div class="clearfix"></div>
+                </div> <!-- footer_section_about -->
+
                 <div class="footer_info">
-                    <p>&#169; 2016 Bookworm. All rights reserved</p>
-                    <hr>
+                    <p class="footer-info-left" >&#169; 2016 Bookworm. All rights reserved</p>
+                    <p class="footer-info-right"></p>
                 </div>
-            </div>
-            </div> <!-- end container -->
-        </div>
+            </div> <!-- end footer_content container-->
+        </section> <!-- wrap-footer -->
 
         <div class="container">
             <div id="wrap-login">
