fixed card2 menu and forms

--- a/cart2.html
+++ b/cart2.html
@@ -28,88 +28,91 @@
                 </li>
             </ul>
         </nav>
-
-        <div class="cart-wrap container">
-            <h1>Your cart</h1>
-            <form action="" id="id-product">
-                <table class="table-cart">
-                    <tr class="table-header">
-                        <td class="del-book"></td>
-                        <td class="img-table">Product</td>
-                        <td class="name-book"></td>
-                        <td class="format">Format</td>
-                        <td class="hardback">Language</td>
-                        <td class="language">Quantity</td>
-                        <td class="price">Price</td>
-                    </tr>
-                    <tr class="tr-container">
-                        <td class="del-img">
-                            <a href="#"><img src="img/rectangle63.png" width="13" height="19" alt="del"></a>
-                            <input type="hidden" id="product-book1">
-                        </td>
-                        <td class="img-table"><img src="img/corpse.png" width="60" height="93" alt="corpse"></td>
-                        <td class="name-book"><a href="#">The Meandering Corpse</a>
-                            <p>Richard S. Prather</p></td>
-                        <td class="font-book-size">Hardback, 170x 215 mm</td>
-                        <td class="font-book-size">English</td>
-                        <td class="quantity-number">
-                            <input class="del" type="button" value="-">
-                            <input type="number" min="1" placeholder="1">
-                            <input class="add" type="button" name="product" value="+">
-                        </td>
-                        <td class="font-money">$25</td>
-                    </tr>
-                    <tr class="tr-container">
-                        <td class="del-img">
-                            <a href="#"><img src="img/rectangle63.png" width="13" height="19" alt="del"></a>
-                            <input type="hidden" id="product-book2">
-                        </td>
-                        <td class="img-table"><img src="img/corpse3.png" width="60" height="93" alt="corpse"></td>
-                        <td class="name-book"><a href="#">English Detective Storiesspan</a>
-                            <p>Patricia Craig</p>
-                        </td>
-                        <td class="font-book-size">Hardback, 170x 215 mm</td>
-                        <td class="font-book-size">English</td>
-                        <td class="quantity-number">
-                            <input class="del" type="button" value="-">
-                            <input type="number" min="1" placeholder="1">
-                            <input class="add" type="button" name="product" value="+">
-                        </td>
-                        <td class="font-money">$25</td>
-                    </tr>
-                    <tr class="tr-container">
-                        <td class="del-img">
-                            <img src="img/rectangle63.png" width="13" height="19" alt="del">
-                            <input type="hidden" id="product-book3">
-                        </td>
-                        <td class="img-table"><img src="img/corpse2.png" width="60" height="93" alt="corpse"></td>
-                        <td class="name-book"><a href="#">Die Like a Dog</a>
-                            <p>Brett Halliday</p>
-                        </td>
-                        <td class="font-book-size">Hardback, 170x 215 mm</td>
-                        <td class="font-book-size">English</td>
-                        <td class="quantity-number">
-                            <input class="del" type="button" value="-">
-                            <input type="number" min="1" placeholder="1">
-                            <input class="add" type="button" name="product" value="+">
-                        </td>
-                        <td class="font-money">$25</td>
-                    </tr>
-                </table>
-            </form>
+        <div class="container">
+            <div class="cart-wrap">
+                <h1>Your cart</h1>
+                <form action="" id="id-product">
+                    <table class="table-cart">
+                        <tr class="table-header">
+                            <td class="del-book"></td>
+                            <td class="img-table">Product</td>
+                            <td class="name-book"></td>
+                            <td class="format">Format</td>
+                            <td class="hardback">Language</td>
+                            <td class="language">Quantity</td>
+                            <td class="price">Price</td>
+                        </tr>
+                        <tr class="tr-container">
+                            <td class="del-img">
+                                <a href="#"><img src="img/rectangle63.png" width="13" height="19" alt="del"></a>
+                                <input type="hidden" id="product-book1">
+                            </td>
+                            <td class="img-table"><img src="img/corpse.png" width="60" height="93" alt="corpse"></td>
+                            <td class="name-book"><a href="#">The Meandering Corpse</a>
+                                <p>Richard S. Prather</p></td>
+                            <td class="font-book-size">Hardback, 170x 215 mm</td>
+                            <td class="font-book-size">English</td>
+                            <td class="quantity-number">
+                                <input class="del" type="button" value="-">
+                                <input type="number" min="1" placeholder="1">
+                                <input class="add" type="button" name="product" value="+">
+                            </td>
+                            <td class="font-money">$25</td>
+                        </tr>
+                        <tr class="tr-container">
+                            <td class="del-img">
+                                <a href="#"><img src="img/rectangle63.png" width="13" height="19" alt="del"></a>
+                                <input type="hidden" id="product-book2">
+                            </td>
+                            <td class="img-table"><img src="img/corpse3.png" width="60" height="93" alt="corpse"></td>
+                            <td class="name-book"><a href="#">English Detective Storiesspan</a>
+                                <p>Patricia Craig</p>
+                            </td>
+                            <td class="font-book-size">Hardback, 170x 215 mm</td>
+                            <td class="font-book-size">English</td>
+                            <td class="quantity-number">
+                                <input class="del" type="button" value="-">
+                                <input type="number" min="1" placeholder="1">
+                                <input class="add" type="button" name="product" value="+">
+                            </td>
+                            <td class="font-money">$25</td>
+                        </tr>
+                        <tr class="tr-container">
+                            <td class="del-img">
+                                <img src="img/rectangle63.png" width="13" height="19" alt="del">
+                                <input type="hidden" id="product-book3">
+                            </td>
+                            <td class="img-table"><img src="img/corpse2.png" width="60" height="93" alt="corpse"></td>
+                            <td class="name-book"><a href="#">Die Like a Dog</a>
+                                <p>Brett Halliday</p>
+                            </td>
+                            <td class="font-book-size">Hardback, 170x 215 mm</td>
+                            <td class="font-book-size">English</td>
+                            <td class="quantity-number">
+                                <input class="del" type="button" value="-">
+                                <input type="number" min="1" placeholder="1">
+                                <input class="add" type="button" name="product" value="+">
+                            </td>
+                            <td class="font-money">$25</td>
+                        </tr>
+                    </table>
+                </form>
+            </div>
         </div>
 
-        <div class="count-form-inner table-cart">
-            <form action="">
-                <div class="coupon-wrap">
-                    <div class="coupon-code">
-                        <input type="text" id="coupon" name="coupon" placeholder="Coupon code">
-                        <button class="coupon_button" type="submit">Apply</button>
-                        <p>Type your coupone code (if you have), and take 20% discount for your order.</p>
-                    </div>
+
+        <div class="count-form-inner">
+            <form action="" class="coupon-wrap">
+                <div class="coupon-code">
+                    <input type="text" id="coupon" name="coupon" placeholder="Coupon code">
+                    <button class="coupon_button" type="submit">Apply</button>
+                    <p>Type your coupone code (if you have), and take 20% discount for your order.</p>
                 </div>
             </form>
                 <div class="proceed-wrap">
+                    <div class="proceed-payment">
+                        <input type="submit" form="id-product" class="btn size-button" value="Checkout">
+                    </div>
                         <div class="proceed-count">
                             <table>
                                 <tr>
@@ -122,9 +125,7 @@
                                 </tr>
                             </table>
                         </div>
-                        <div class="proceed-payment">
-                            <input type="submit" form="id-product" class="btn size-button" value="Checkout">
-                        </div>
+
                         <div class="clearfix"></div>
                 </div>
                 <div class="clearfix"></div>
